// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-status-rule-form Renders \`alarm-status-rule-form\` with custom props 1`] = `
<div
  class="layout gap-2 column"
>
  <c-enabled-field-stub
    hide-details=""
    with-background=""
  />
  <div>
    <div
      class="layout column"
    >
      <c-name-field-stub
        autofocus=""
        max-length="255"
        required=""
        value="name"
      />
      <c-form-block-stub>
        <c-form-block-row-stub
          label="common.priority"
        >
          <c-priority-field-stub
            value="2"
          />
        </c-form-block-row-stub>
        <c-form-block-row-stub
          label="common.duration"
        >
          <c-duration-field-stub
            required=""
            value="[object Object]"
          />
        </c-form-block-row-stub>
        <c-form-block-row-stub
          label="common.frequencyLimit"
        >
          <c-number-field-stub
            label="common.frequencyLimit"
            min="1"
            name="freq_limit"
            value="3"
          />
        </c-form-block-row-stub>
        <c-form-block-row-stub
          label="common.description"
        >
          <c-description-field-stub
            required=""
            value="description"
          />
        </c-form-block-row-stub>
      </c-form-block-stub>
    </div>
    <alarm-status-rule-patterns-form-stub
      class="mt-2"
      flapping="true"
      form="[object Object]"
    />
  </div>
</div>
`;

exports[`alarm-status-rule-form Renders \`alarm-status-rule-form\` with default props 1`] = `
<div
  class="layout gap-2 column"
>
  <c-enabled-field-stub
    hide-details=""
    with-background=""
  />
  <div>
    <div
      class="layout column"
    >
      <c-name-field-stub
        autofocus=""
        max-length="255"
        required=""
      />
      <c-form-block-stub>
        <c-form-block-row-stub
          label="common.priority"
        >
          <c-priority-field-stub />
        </c-form-block-row-stub>
        <c-form-block-row-stub
          label="common.duration"
        >
          <c-duration-field-stub
            required=""
          />
        </c-form-block-row-stub>
        <!---->
        <c-form-block-row-stub
          label="common.description"
        >
          <c-description-field-stub
            required=""
          />
        </c-form-block-row-stub>
      </c-form-block-stub>
    </div>
    <alarm-status-rule-patterns-form-stub
      class="mt-2"
      form="[object Object]"
    />
  </div>
</div>
`;
